[package]
name = "nvm_store"
version = "0.1.0"
authors = ["yanjuguang <coolyanjg@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
dunce = "0.1.1"